--- a/CouchHeroes-Backend/src/client/index.html
+++ b/CouchHeroes-Backend/src/client/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Couch Heroes</title>
-    <link rel="stylesheet" href="static/css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="static/views/room/css/styles.css" type="text/css"/>
 </head>
 <body>
     <style>
